style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body{
    font-family: 'Outfit', sans-serif;
    background-color: hsl(217, 54%, 11%);
    color: white;
    display: grid;
    place-content: center;
    min-width: 100vw;
    min-height: 100vh;
    
    
}
.card{
    position: relative;
    background-color:hsl(216, 50%, 16%) ;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 2rem;
    min-width: 23rem;
    margin-bottom: 20px;
    margin-top: 40px;
}

.image{
    border-radius: 1rem;
    display: flex;
    align-items: center;
    
    
}
/* .view{
    transition: .1s ease;
      opacity: 0;
      position: absolute;
      top: 30%;
      left: 45%;
}
.image:hover {
    opacity: 0.5;
  }
  
  .view:hover {
    opacity: 1;
  } */
  
.grid-flow{
    display: grid;
    align-content: start;
    gap: 1rem;
}
.nft_content h2:hover{
    color: hsl(178, 100%, 50%);
    cursor: pointer;
}
.nft_content p{
    color:hsl(215, 51%, 70%);
    word-wrap: break-word;
    font-weight: 200;
    
}
.nft_details{
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    
}
.nft_amount {
    display: flex;
    gap: 0.5rem;
    color:  hsl(178, 100%, 50%);
}
.nft_time{
    display: flex;
    align-items: center;
    gap: 0.5rem;
    color: hsl(215, 51%, 70%);
    font-weight: 200;

}
.nft_creator{
    color: hsl(215, 51%, 70%);
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 1.5rem;
}
.nft_creator p span{
    color: white;
}
.creator_image{
    border: 1px solid white;
    border-radius: 50%;
}


hr{
    border: 1px solid hsl(215, 32%, 27%);
}

